# OpenStaadPython

./: .gitignore  CLAUDE.md  Functions.json  LICENSE  README.md  implemented.md  push_tags.txt  pyproject.toml  requirements.txt  root_.py  setup.py  start.bat  test  test.py  test1.py  vs.code-workspace
.github/workflows/: release.yaml
docs/: Functions.json  arquitectura_ops.md  filters.ipynb  implemented.md
examples/: example_geometry.py  example_load.py  example_output.py  example_properties.py  example_root.py  example_view.py  get_selected.py
openstaad/: Safe_variables.py  __init__.py  command.py  design.py  file.py  geometry.py  get.py  load.py  output.py  properties.py  results.py  root.py  select.py  support.py  tools.py  view.py
openstaad/ops/: __init__.py  _com.py  bridge.py  command.py  design.py  geometry.py  load.py  output.py  property.py  root.py  session.py  support.py  table.py  view.py
scripts/: start.bat  start.sh
