[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openstaad"
version = "0.0.4"
authors = [{ name = "konrad", email = "opensteel611@example.com" }]
description = "A small example package for openstaad python package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["comtypes==1.2.0"]

[project.urls]
Homepage = "https://github.com/OpenStaad/OpenStaadPython"
Issues = "https://github.com/OpenStaad/OpenStaadPython/issues"
