[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openstaad"
version = "0.0.13"
authors = [{ name = "konrad", email = "opensteel611@example.com" }]
description = "A small example package for openstaad python package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.15"  # Limita a 3.10-3.14
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["comtypes==1.4.15"]

[project.urls]
Homepage = "https://github.com/OpenStaad/OpenStaadPython"
Issues = "https://github.com/OpenStaad/OpenStaadPython/issues"
